# ImageD11

./: .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST  MANIFEST.in  PKG-INFO  README.MD  README.TXT  README.md  _cImageD11module.c  anacondatestwin64.bat  appveyor.yml  bld_test_linux.sh  changelog.txt  enlightenment.py  find_all_files_interfacing.py  fixprint.py  friedel_pairs.py  howto_compile_win64.txt  lgtm.yml  pycheck.out  pyproject.toml  refinegrains.py  setup.cfg  setup.py  todo.txt  winmake.bat
.circleci/: config.yml
ImageD11/: ImageD11_file_series.py  ImageD11_thread.py  ImageD11options.py  __init__.py  bisplev.py  blobcorrector.py  cImageD11.py  cImageD11_docstrings.py  colfile2db.py  columnfile.py  columnfile_pandas.py  compute_fazit.py  correct.py  data.py  eps_sig_solver.py  eps_sig_solver_NEW.py  factors.py  fetch_data.py  fft_index.py  fft_index_refac.py  findreflections.py  finite_strain.py  fitgrainxy.py  frelon_peaksearch.py  friedel_pairs.py  grain.py  grid_index_parallel.py  guicommand.py  guifactors.py  guiindexer.py  guimaker.py  guipeaksearch.py  guisolver.py  guitransformer.py  gv_general.py  hist.py  imaged11.py  indexer.py  indexing.py  (+37 more)
src/: .clang-format  .gitignore  .indent.pro  CMakeLists.txt  ImageD11_cmath.h  _cImageD11.pyf  _cImageD11module.c  bispev.f  bldlib.py  blobs.c  blobs.h  build_ffi_demo.py  cImageD11.h  cImageD11.pyf  cImageD11_avx.pyf  cImageD11_avx2.pyf  cImageD11_interface.f90  cImageD11_interface.pyf  cImageD11_sse2.pyf  cImageD11_template.pyf  cImageD11module.c  cdiffraction.c  cdiffraction.h  cdiffraction.py  check_cpu.c  check_cpu_auto.c  check_cpu_auto.h  cimaged11utils.c  closest.c  colfile2raw.f  connectedpixels.c  connectedpixels.pyf  connectedpixelsmodule.c  create_cpu_check.py  darkflat.c  deriv.c  diffraction.c  dset.h  dsetup.py  f2c.h  (+17 more)
src/old/: bispev.c  bldlib.py  cdiffraction.py  check_cpu.c  dsetup.py  f2c.h  refs.c  test_refs.c
(+897 files in other folders)
